Update disaster report controller & API docs
- Update DisasterReportController to include lat & long in all functions
- Update & generate swagger docs for the updated disaster report API
